--- a/app/src/main/res/layout/activity_tips_pokemon_pro.xml
+++ b/app/src/main/res/layout/activity_tips_pokemon_pro.xml
@@ -88,5 +88,18 @@
             android:text="Button"
             tools:ignore="HardcodedText" />
 
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize="SMART_BANNER"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+            tools:ignore="ObsoleteLayoutParam">
+        </com.google.android.gms.ads.AdView>
+
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
