--- a/app/src/main/res/layout/activity_tips_pokemon_pro2.xml
+++ b/app/src/main/res/layout/activity_tips_pokemon_pro2.xml
@@ -26,7 +26,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="24dp"
-                android:text="The Pokemon pass dependancy has gripped the arena by using its horns. players have continuously been trying to degree up with the aid of amassing various Pokemon in the sport. Even the most addicted and devoted player wouldn’t refuse to apply any recommendations or tricks to be able to assist them to degree up quick. today, we've got compiled a listing of eleven cheats which works on Pokemon cross. these cheats are absolutely safe to use in contrast to a few others which might be unstable to use such as using a cheat to get limitless Pokecoins.  Catching Pikachu on the start  there may be a completely easy manner to seize Pikachu on the very starting of the game. when you start the sport for the primary time, you have got the choice of picking from one of the three Pokemon starters: Charmander, Squirtle and Bulbasaur. You’ll must ignore this authentic trio if you want to make Pikachu your first catch. All you'll need to do is keep strolling past them till they disappear from your map. but, those Pokemon will pop-up over again once you get too some distance away from them. So, you’ll have to ignore them continuously 4 times, and inside the 5th strive they will be observed via a Pikachu. " />
+                android:text="The Pokemon pass dependancy has gripped the arena by using its horns. players have continuously been trying to degree up with the aid of amassing various Pokemon in the sport. Even the most addicted and devoted player wouldn’t refuse to apply any recommendations or tricks to be able to assist them to degree up quick. today, we've got compiled a listing of eleven cheats which works on Pokemon cross. these cheats are absolutely safe to use in contrast to a few others which might be unstable to use such as using a cheat to get limitless Pokecoins.  Catching Pikachu on the start  there may be a completely easy manner to seize Pikachu on the very starting of the game. when you start the sport for the primary time, you have got the choice of picking from one of the three Pokemon starters: Charmander, Squirtle and Bulbasaur. You’ll must ignore this authentic trio if you want to make Pikachu your first catch. All you'll need to do is keep strolling past them till they disappear from your map. but, those Pokemon will pop-up over again once you get too some distance away from them. So, you’ll have to ignore them continuously 4 times, and inside the 5th strive they will be observed via a Pikachu. "
+                tools:ignore="HardcodedText,SpUsage" />
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/adView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                app:adSize="BANNER"
+                app:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
+
+
         </LinearLayout>
     </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
