--- a/app/src/main/res/layout/activity_tips_pokemon_pro3.xml
+++ b/app/src/main/res/layout/activity_tips_pokemon_pro3.xml
@@ -28,6 +28,17 @@
                 android:text="Don’t forget about them if you preserve getting the same Pokemon to show up  in case you maintain getting the same Pokemon again and again once more, hold them. you may evolve them later while you degree up your instructor. Pokemon move gamers level up their trainers after acquiring enough XP required for their subsequent degree. The trainers with higher stages get to catch Pokemon with better CP and HP. on the other hand, evolving your duplicate Pokemon is every other proper option. It simplest fees a few sweet to adapt not unusual Pokemon like Rattata, Pidgey and Weedle, which in return gives you 500 XP. They also can be transferred to Professor Willow later so as to earn every other bonus sweet.  Use instructor degree to boom the help of fortunate Eggs and Incense  You normally earn 500 XP for evolving a Pokemon. using fortunate Eggs doubles up the XP for a 1/2 hour, this means that you’ll receive a thousand XP for each Pokemon developed at some stage in that point body. it's far advisable which you hold the regularly determined Pokemon for evolving whilst the usage of fortunate Eggs. you may also use an Incense on the identical time, as the 500 XP for catching a new Pokemon will double up because of the fortunate Eggs."
                 android:textSize="24sp"
                 tools:ignore="HardcodedText" />
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/adView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                app:adSize="BANNER"
+                app:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
+
+
         </LinearLayout>
     </ScrollView>
 
