--- a/app/src/main/res/layout/activity_tips_pokemon_pro4.xml
+++ b/app/src/main/res/layout/activity_tips_pokemon_pro4.xml
@@ -28,6 +28,17 @@
                 android:text="Don’t use Stardust till you attain level 12 or 15  In Pokemon pass, you're rewarded with Stardust quite frequently for catching Pokemon and hatching eggs. Stardust will assist you later in increasing the strength stage of the pinnacle-stage Pokemon. The Pokemon that you seize while at low instructor ranges are omitted while the level increases, so, any usage of Stardust over them will just be a waste  Throw a curve ball  you may have already observed the curveball bonus a couple of times. The bonus seems simply after scooping up a Pokemon. you may easily earn that curveball bonus by using the use of a easy trick. you could faucet the Pokeball at the bottom of your screen, drag it forward, and swirl it in a circular way whilst you are attempting to seize a Pokemon. after you begin swirling it around in a round way, the Pokeball will start spraying sparks and it will likely be that second whilst you'll want to throw the ball toward the Pokemon. this can want some practice until to begin earning curveball bonuses extra often. "
                 android:textSize="24dp"
                 tools:ignore="HardcodedText,SpUsage" />
+
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/adView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                app:adSize="BANNER"
+                app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+                tools:ignore="ObsoleteLayoutParam"></com.google.android.gms.ads.AdView>
         </LinearLayout>
     </ScrollView>
 
