--- a/app/src/main/res/layout/activity_tips_pokemon_pro1.xml
+++ b/app/src/main/res/layout/activity_tips_pokemon_pro1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="@color/colorPrimary"
-    tools:context="com.tips.tips_pokemon_pro.tips_pokemon_pro"
+    tools:context="com.tips.tips_pokemon_pro.tips_pokemon_pro1"
     tools:targetApi="lollipop">
 
     <LinearLayout
