remove  adobe add appodeal

--- a/app/src/main/res/layout/activity_ultramannexus.xml
+++ b/app/src/main/res/layout/activity_ultramannexus.xml
@@ -50,6 +50,8 @@
             android:text="Unlockable characters 2"
             tools:ignore="HardcodedText" />
 
+
+
         <Button
             android:id="@+id/button8"
             android:layout_width="match_parent"
@@ -58,15 +60,11 @@
             android:text="Unlockable characters 3"
             tools:ignore="HardcodedText" />
 
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/adView"
-            android:layout_width="wrap_content"
+        <com.appodeal.ads.BannerView
+            android:id="@+id/appodealBannerView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            app:adSize="SMART_BANNER"
-            app:adUnitId="ca-app-pub-3940256099942544/6300978111"
-            tools:ignore="ObsoleteLayoutParam"></com.google.android.gms.ads.AdView>
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/button9"
